# nse-tbt-feed-ai-trading

./: .gitignore  README.md  a.out  makefile
cm-mtbt-client/: CMakeLists.txt  README.md  build.sh  makefile
cm-mtbt-client/config/: client_config.cfg
cm-mtbt-client/inc/: app_defs.h  app_structs.h  common.h  config_parser.h  log.h  multicast.h
cm-mtbt-client/scripts/: run_with_realtime.sh  set_env.sh
cm-mtbt-client/src/: common.cpp  config_parser.cpp  log.cpp  multicast.cpp  nse_feed_client.cpp
config/: app_config.cfg  multicast_config.cfg
inc/: .app_structs.h.swp  app_defs.h  app_structs.h  common.h  config_parser.h  log.h  simulate_mtbt_values.h
mt-nse-cm-mtbt-server/: CMakeLists.txt  build.sh  makefile  makefile1
mt-nse-cm-mtbt-server/inc/: app_defs.h  log.h
mt-nse-cm-mtbt-server/scripts/: run_with_realtime.sh  set_env.sh
mt-nse-cm-mtbt-server/src/: log.cpp  multicast.cpp  nse_feed_gen.cpp  simulate_mtbt_values.cpp
nse-cm-mtbt-server/: CMakeLists.txt  makefile
nse-cm-mtbt-server/inc/: latency_benchmark.h  log.h
nse-cm-mtbt-server/scripts/: set_env.sh
nse-cm-mtbt-server/src/: common.cpp  latency_benchmark.cpp  multicast.cpp  nse_feed_gen.cpp  simulate_mtbt_values.cpp
scripts/: runWithRealtime.sh  set_env.sh
src/: common.cpp  config_parser.cpp  log.c  log.cpp  multicast.cpp  nse_feed_gen.cpp  simulate_mtbt_values.cpp
